# StayOS

./: .env.example  .env.test  .gitignore  AGENTS.md  AI_RULES.md  ASSUMPTIONS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DECISION_LOG.md  ENGINEERING_RULES.md  GEMINI.md  LICENSE  MASTER_CONTEXT.md  PROJECT_VISION.md  README.md  RISKS.md  ROADMAP.md  SPRINT_1_REPORT.md  TASKS.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  استبيان.docx
.ai/AUDIT/: MIGRATION_PLAN.md  PROJECT_EXECUTIVE_REVIEW.md  REPOSITORY_AUDIT.md  REPOSITORY_CLASSIFICATION.md  REPOSITORY_REFACTOR_PLAN.md  ROADMAP.md  TASKS.md
.ai/CURRENT/: ARCHITECTURE.md  ARCHITECTURE_FREEZE.md  ASSUMPTIONS.md  CODEX.md  CONTEXT.md  DECISION_LOG.md  DEVIN.md  MASTER_PROJECT_MEMORY.md  PRODUCT_CANON.md  PROJECT_RULES.md  SPRINT_MEMORY.md  TECH_STACK.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pr_template.md
.github/labels/: labels.md
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml  docs.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 001_create_schemas.py
apps/web/: package-lock.json  package.json
archive/: CLEANUP_REPORT.md
archive/raw-ai-output/: Pasted markdown (2)(2).md  Pasted markdown(23).md
archive/raw-prompts/: # STAYOS_# PHASE 0_# DECISION INTELLIGENCE ENGINE... - # STAYOS_# PHASE 0_# DECISION INTELLIGENCE ENGINE... (1).csv  (+4 more)
docs/: DEPENDENCY_GRAPH.md  DOCUMENT_MAP.md  ENGINEERING_MASTER_PLAN.md  ENGINEERING_PROGRESS.md  MANIFEST.md  MVP_SLICE.md  OWNERSHIP_MATRIX.md  SINGLE_SOURCE_OF_TRUTH.md
docs/02_product/: FLOWS.md  (+8 more)
epos/: AUTHORITY.md  KNOWLEDGE_BASE.md  NEXT_SPRINT.md  PROJECT_REVIEW.md  PROJECT_STATE.md  REGISTRY.md  SESSION_RECORD.md  SHUTDOWN_PROTOCOL.md  STARTUP_PROTOCOL.md  WORKING_MEMORY.md
tools/: README_extract_docs.md  cto_ai.py  extract_docs.py  repository_auditor.py  repository_cleanup.py  repository_dashboard.py  repository_indexer.py
(+129 files in other folders)
